; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopnz.c_m68k_op_reset.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/musashi/extr_m68kopnz.c_m68k_op_reset.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FLAG_S = common dso_local global i64 0, align 8
@CYC_RESET = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @m68k_op_reset() #0 {
  %1 = load i64, i64* @FLAG_S, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %7

3:                                                ; preds = %0
  %4 = call i32 (...) @m68ki_output_reset()
  %5 = load i32, i32* @CYC_RESET, align 4
  %6 = call i32 @USE_CYCLES(i32 %5)
  br label %9

7:                                                ; preds = %0
  %8 = call i32 (...) @m68ki_exception_privilege_violation()
  br label %9

9:                                                ; preds = %7, %3
  ret void
}

declare dso_local i32 @m68ki_output_reset(...) #1

declare dso_local i32 @USE_CYCLES(i32) #1

declare dso_local i32 @m68ki_exception_privilege_violation(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
